docs: images-vips spec — 2-R 리뷰 반영 (critical/major 전수 수정)
- Critical: JVips 버전 8.12.2→8.10.2-38fe1f6 통일
- Critical: §4.6 Resource Lifecycle (Cleaner, 코루틴 취소 안전성, shutdown 소유권)
- Critical: §4.7 Exception Hierarchy (VipsException 계층)
- Critical: §8.5 Security Boundaries (이미지 폭탄, path traversal, 신뢰 경계)
- Critical: §4.8 Concurrency Policy (Dispatchers.Vips, 스레드 수학, fallback)
- Major: suspend 팩토리 네이밍 통일 (suspend fun vipsImageOf 오버로드)
- Major: VipsEncodeOptions readResolve() 역직렬화 가드
- Major: forkEvery=1 + VipsRuntime init 스레드 안전성
- Major: §1.4 모듈 선택 가이드 추가
- Major: writeTo(OutputStream) 오버로드 추가
- Major: CI workflow ubuntu-24.04 고정 + 이중 Java toolchain + unversioned apt
- Major: §2.0 Considered Alternatives 추가
- Minor: DoD 항목 보강 (BOM, wiki-update, Mermaid, code-reviewer)